--- a/netlify/functions/hello-world/package.json
+++ b/netlify/functions/hello-world/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "A webhook function for Mercado Pago payments.",
   "dependencies": {
-    "firebase-admin": "^11.11.1"
+    "firebase-admin": "^11.11.1",
+    "node-fetch": "^2.7.0"
   }
 }
