--- a/netlify/functions/hello-world/package.json
+++ b/netlify/functions/hello-world/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "mercadopago-webhook",
-  "version": "1.0.0",
-  "description": "A webhook function for Mercado Pago payments.",
-  "dependencies": {
-    "firebase-admin": "^11.11.1",
-    "node-fetch": "^2.7.0"
+  "scripts": {
+    "build": "tsc && cp package.json dist/ && cp package-lock.json dist/"
+  },
+  "devDependencies": {
+    "typescript": "^5.0.0",
+    "@types/node": "^20.0.0"
   }
 }
